@@ -1,3 +1,8 @@
+2008-10-12  David Bateman  <dbateman@free.fr>
+
+	* general/colon..m: New function.
+	* general/Makefile.in (SOURCES): Add it here.
+
 2008-10-10  David Bateman  <dbateman@free.fr>
 
 	* image/__img__.m: Manually set the limits of th eimage
